// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Dialog.Content"
    id="dialogDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`composition hook should return with Dialog props 1`] = `
Object {
  "aria-describedby": undefined,
  "aria-labelledby": undefined,
  "children": <Context.Provider
    value={
      Object {
        "descriptionId": "",
        "titleId": "",
      }
    }
  >
    <React.Fragment>
      <ForwardRef />
    </React.Fragment>
  </Context.Provider>,
  "className": "css-5r32jl css-1pwrqjj css-3ekj6a fp-Box fp-Dialog",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  border-radius: 4px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

<div
  aria-describedby="dialogDescription"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

.emotion-5 {
  color: #3722ed !important;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-5 test fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Dialog.Content"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Dialog.Content"
    id="dialogDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

.emotion-5 {
  color: #3722ed !important;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-5 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Dialog.Content"
    id="dialogDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`theming Dialog.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 1.5rem;
}

.emotion-3 {
  border-radius: 4px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-3 {
  background-color: red;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Dialog.Content"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;
